fix font size to work better on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@ body {
 #logo {
     height: 7vw;
     position: relative;
+    top:1.5vw;
+
 }
 
 #myNavbar {
@@ -25,14 +27,13 @@ body {
 }
 
 .navbar-right {
-    font-size: 2.5vw;
+    font-size: 3vw;   
     margin-top: 40px;
     margin-right: 20px;
-    background-color:#D9E8EE;
+    background-color: #D9E8EE;
 }
 
 .container-fluid {
-    font-size: 2.5vw; 
     height: 10vw;
     background-color: #D9E8EE;
     color: #845EC2;
@@ -40,7 +41,7 @@ body {
 }
 
 .navbar-toggle {
-    background-color:rgba(107, 107, 184, 0.662);
+    background-color: rgba(107, 107, 184, 0.662);
     border: rgba(107, 107, 184, 0.662);
 }
 
@@ -48,16 +49,17 @@ body {
     border-color: #D9E8EE;
     z-index: 3;
     position: relative;
-    right:3vw;
-    top:3vw;
+    right: 3vw;
+    top: 3vw;
 }
 
-.navbar-inverse .navbar-collapse{
-    border-color:#D9E8EE;
+.navbar-inverse .navbar-collapse {
+    border-color: #D9E8EE;
     z-index: 3;
 }
 
-.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
+.navbar-inverse .navbar-toggle:focus,
+.navbar-inverse .navbar-toggle:hover {
     background-color: #337ab7;
 }
 
@@ -65,13 +67,16 @@ body {
     border-color: #D9E8EE;
     background-color: #D9E8EE;
 }
+
 .navbar-nav>li>a {
     z-index: 3;
     background-color: #D9E8EE;
 }
+
 .navbar-collapse.in {
-    overflow:visible;
+    overflow: visible;
 }
+
 #myCarousel {
     height: 50vw;
     max-width: 100vw;
@@ -85,16 +90,16 @@ body {
 #first-heading {
     color: #b3d0d9;
     position: relative;
-    left: 7vw;
-    top: 7vw;
+    left: 3vw;
+    bottom: 2vw;
     margin-top: 5vw;
-    font-size: 3vw;
+    font-size: 4.5vw;
     text-align: center;
-    width: 58vw;
-    height: 5vw;
+    width: 86vw;
+    height: 7vw;
     background-color: rgba(107, 107, 184, 0.662);
-    z-index: 3;
     padding: 1%;
+    border-radius: 1vw;
 }
 
 .images {
@@ -113,9 +118,9 @@ body {
     bottom: 8vw;
     text-align: center;
     margin-top: 5vw;
-    font-size: 3vw;
-    width: 19vw;
-    height: 4vw;
+    font-size: 4vw;
+    width: 24vw;
+    height: 5vw;
     background-color: rgba(107, 107, 184, 0.662);
     padding: 0.5%;
 }
@@ -132,11 +137,11 @@ body {
     bottom: 22vw;
     font-weight: bold;
     margin-top: 5vw;
-    font-size: 1.5vw;
+    font-size: 2vw;
     text-align: center;
     width: 75vw;
-    height: 15vw;
-    background-color: rgba(107, 107, 184, 0.662);
+    height: 25vw;
+    background-color:rgb(107, 107, 184);
     padding: 1%;
 }
 
@@ -144,46 +149,65 @@ body {
     color: #b3d0d9;
     position: relative;
     bottom: 10vw;
-    height: 14vw;
+    height: 25vw;
     width: 100vw;
     background-color: rgba(107, 107, 184, 0.662);
-    padding-top: 4vw;
 }
 
 #newsletter {
     position: relative;
-    font-size: 3vw;
+    font-size: 5vw;
+    top: 2vw;
     left: 3vw;
 }
 
 #newsletter-info {
-    font-size: 1.5vw;
-
+    font-size: 2.5vw;
+    position: relative;
+    top: 2vw;
+    left: 3vw;
+    width: 30vw;
 }
 
 #newsletter-form {
     font-size: 1.5vw;
     text-align: center;
-    float: right;
     color: #b3d0d9;
     position: relative;
-    bottom: 8vw;
-    padding-top: 1vw;
-    padding-bottom: 1vw;
-    height: 20vw;
-    width: 20vw;
+    bottom: 39vw;
+    left: 43vw;
+    height: 33vw;
+    width: 50vw;
     background-color: rgb(107, 107, 184);
-    margin-right: 9vw;
+}
 
+.input-form {
+    font-size: 3vw;
+    border: 1vw;
+    margin-top: 3vw;
+    padding-left: 1vw;
+    color:#D9E8EE;
+}
+
+.input-form-box {
+    font-size: 3vw;
+    border: 1vw;
+    margin-top: 3vw;
+    padding-left: 1vw;
+    color: #845EC2;
 }
 
 input[type=submit] {
     margin: 1vw;
-    width: 7vw;
+    font-size: 3vw;
+    width: 13vw;
     background-color: #b3d0d9;
     border-radius: 1vw;
     color: rgb(107, 107, 184);
+}
 
+#section-34 {
+    height: 25vw;
 }
 
 footer {
@@ -242,7 +266,7 @@ footer {
     padding: 1%;
 }
 
-#staff-div{
+#staff-div {
     height: 65vw;
 }
 
@@ -343,8 +367,8 @@ footer {
 
 #video-box {
     position: relative;
-    bottom:5vw;
-    left:12vw;
+    bottom: 5vw;
+    left: 12vw;
 }
 
 #camper-video {
@@ -356,7 +380,7 @@ footer {
     position: relative;
     padding: 1%;
     border-radius: 1vw;
-    left:5vw;
+    left: 5vw;
 }
 
 /* conversions page */
@@ -364,7 +388,7 @@ footer {
 .inside-conversion {
     position: relative;
     top: 4vw;
-    left:1vw;
+    left: 1vw;
     width: 28vw;
     margin: 1.5vw;
     border-radius: 1vw;
@@ -630,7 +654,7 @@ footer {
     width: 35vw;
 }
 
-#janie-3{
+#janie-3 {
     position: relative;
     left: 40vw;
     border-radius: 1vw;
@@ -672,10 +696,10 @@ footer {
     width: 30vw;
 }
 
-#rob-3{
+#rob-3 {
     position: relative;
     right: 30vw;
-    top:40vw;
+    top: 40vw;
     border-radius: 1vw;
     width: 30vw;
 }
@@ -715,7 +739,7 @@ footer {
     width: 35vw;
 }
 
-#john-3{
+#john-3 {
     position: relative;
     left: 40vw;
     border-radius: 1vw;
